[package]
name = "test-fsm"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
reqwest = { version = "0.10.6", features = [ "blocking" ] }
url = "2.1"
